# client

./: .env.example  .gitignore  CSS-ARCHITECTURE.md  CSS-ORGANIZATION-GUIDE.md  INTEGRATION-CHECKLIST.md  README.md  THEME-SYSTEM-README.md  electron-builder.yml  electron.vite.config.mjs  make-icon.mjs  package-lock.json  package.json
.github/workflows/: build.yml  main.yml  release.yml
docs/: architecture.drawio
native/audio-capture/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
native/audio-capture/src/: lib.rs  linux.rs  stub.rs  windows.rs
scripts/: gen-tray-icons.mjs  postinstall.cjs
src/main/: audioCapture.js  audioCaptureHost.js  index.js  keybinds.js  tray.js  updater.js
src/preload/: index.js
src/renderer/: index.html
src/renderer/src/: App.css  App.jsx  main.jsx
src/renderer/src/assets/: base.css  globals.css  main.css  themes.css
src/renderer/src/components/: AdvancedSettings.jsx  AudioSettings.jsx  Channel.jsx  ChannelPermissions.css  ChannelPermissions.jsx  ChannelSummary.jsx  ChatPanel.css  ChatPanel.jsx  ClientContextMenu.jsx  ClientIndicator.jsx  ClientSummary.css  ClientSummary.jsx  ConnectionOverlay.css  ConnectionOverlay.jsx  EmojiPicker.jsx  ErrorBoundary.css  ErrorBoundary.jsx  GeneralSettings.jsx  IdleAnimation.css  IdleAnimation.jsx  ImageViewer.css  ImageViewer.jsx  Inbox.jsx  KeybindsSettings.jsx  LoginScreen.css  LoginScreen.jsx  NotificationBell.css  NotificationBell.jsx  RolesGroupsMenu.css  RolesGroupsMenu.jsx  ScreenSourcePicker.css  ScreenSourcePicker.jsx  SegmentedTabs.jsx  (+21 more)
src/shared/: keybinds.js
(+43 files in other folders)
